security: comprehensive security audit and fixes - Enhanced .gitignore with security exclusions - Implemented security headers (X-Frame-Options, X-Content-Type-Options, Referrer-Policy) - Fixed TypeScript 'any' types for better type safety - Added basic Jest testing infrastructure with App component tests - Created comprehensive security audit documentation - Established 70% coverage threshold for testing - Version bump to 1.1.2 for security improvements

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,19 @@ dist
 dist-ssr
 *.local
 
+# Environment files (SECURITY CRITICAL)
+.env
+.env.*
+!.env.example
+
+# Security and sensitive files
+*.key
+*.pem
+*.p12
+*.pfx
+.secrets
+config/secrets.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +35,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Testing and coverage
+coverage/
+.nyc_output/
+test-results/
+playwright-report/
+
+# Build and deployment
+.vercel
+.netlify
+.firebase
