--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "storybook": "^8.6.14",
+    "ts-jest": "^29.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
