--- a/env.example
+++ b/env.example
@@ -43,6 +43,16 @@ VITE_GA_TRACKING_ID=
 VITE_GTM_ID=
 VITE_HOTJAR_ID=
 
+# Analytics per Application (GA4)
+VITE_GA_CORPORATE_ID=
+VITE_GA_BLOG_ID=
+VITE_GA_CATALOG_ID=
+
+# Meta Pixel per Application
+VITE_META_PIXEL_CORPORATE_ID=
+VITE_META_PIXEL_BLOG_ID=
+VITE_META_PIXEL_CATALOG_ID=
+
 # SEO Configuration
 VITE_DEFAULT_TITLE=PRILABSA Framework - Solaria Agency
 VITE_DEFAULT_DESCRIPTION=Modern, modular web framework for multi-client applications. Developed by Solaria Agency.
